# BuildingAnEngineFromScratch

./: .gitignore  .gitmodules  README.md
LearningDX12/: .gitignore  BaseGameInterface.cpp  BaseGameInterface.h  CMakeLists.txt  CommandQueue.cpp  CommandQueue.h  DX12App.cpp  DX12App.h  DemoBoxGame.cpp  DemoBoxGame.h  FbxLoader.cpp  FbxLoader.h  GameWorld.cpp  GameWorld.h  LearningDX12.aps  LearningDX12.cpp  LearningDX12.rc  LearningDX12.sln  LearningDX12.vcxproj  LearningDX12.vcxproj.filters  LightingTexturedDemoBoxGame.cpp  LightingTexturedDemoBoxGame.h  Main.cpp  MultipleObjectsDemo.cpp  MultipleObjectsDemo.h  PixelShader_Textured_Light.hlsl  Resource.h  TexturedDemoBoxGame.cpp  TexturedDemoBoxGame.h  VertexShader_Textured.hlsl  VertexShader_Textured_Light.hlsl  Win32Application.cpp  d3dx12.h
LearningDX12/PhysX5/lib/checked/: PhysXCommon_64.lib  PhysXPvdSDK_static_64.lib
LearningDX12/PhysX5/lib/debug/: PhysXCommon_64.lib  PhysXFoundation_64.lib
LearningDX12/PhysicsWorld/: PhysxWorld.cpp  PhysxWorld.h
LearningDX12/Resources/: PixelShader_Textured_Light.hlsl  VertexShader.hlsl  model.fbx  shaders.hlsl
LearningDX12/Resources/shaders/: shader.frag  shader.vert
LearningDX12/Source/: CMakeLists.txt
LearningDX12/Source/Fbx/: CMakeLists.txt
LearningDX12/Source/Flecs/: CMakeLists.txt  GameWorld.h
LearningDX12/Source/ImGui/: CMakeLists.txt
LearningDX12/Source/PhysicsWorld/: CMakeLists.txt
LearningDX12/Source/Renderer/: CMakeLists.txt  CommandQueue.cpp  D3D12HelloTexture.cpp  D3D12HelloTexture.h  DX12App.cpp  DX12App.h  DXSample.cpp  DXSample.h  DXSampleHelper.h  DemoBoxGame.h  LightingTexturedDemoBoxGame.cpp  MultipleObjectsDemo.cpp  MultipleObjectsDemo.h  Renderer.cpp  Renderer.h  TexturedDemoBoxGame.h  Vertex.cpp  Vertex.h  stb_image.cpp
LearningDX12/Source/Renderer/DirectXTK12-main/: CMakeLists.txt
SelfishGame/: CMakeLists.txt  Main.cpp  vert.spv
SelfishGame/Resources/: PixelShader.hlsl  PixelShader_Textured.hlsl  VertexShader_Textured_Light.hlsl  model.mb
SelfishGame/Resources/shaders/: shader.frag  shader.vert
SelfishGame/Source/: CMakeLists.txt
SelfishGame/Source/Fbx/: FbxLoader.cpp  FbxLoader.h
SelfishGame/Source/Flecs/: GameWorld.cpp  GameWorld.h
SelfishGame/Source/PhysicsWorld/: PhysxWorld.cpp  PhysxWorld.h
SelfishGame/Source/Renderer/: CMakeLists.txt  GpuImage.cpp  GpuImage.h  Renderer.cpp  Renderer.h  Vertex.cpp  Vertex.h
SelfishGame/Source/Renderer/Fbx/: FbxLoader.cpp  FbxLoader.h
